--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
 
 <div id="top"></div>
 	
-<p>I am currently working on distributed systems, graph theory, theory of computation. My advisor is <a href="http://www.cse.msu.edu/~sandeep/"><u>Professor Sandeep S Kulkarni</u></a>.
+<p>I am a PhD student at the Department of Computer Science and Engineering, Michigan State University. My research involves distributed systems, graph theory, theory of computation. My advisor is <a href="http://www.cse.msu.edu/~sandeep/"><u>Professor Sandeep S Kulkarni</u></a>.
 <p>During my undergraduate, I dealt with software projects, projects based on embedded systems, intelligence, and analysis. I instructed over software development, embedded systems (arduino, atmega, raspberry), and programming (Java, Python, C, C++).
 <p>I am also interested in modelling of natural systems, particularly in computational biology and applications of computer science in healthcare, agriculture.
 <p>My h-index is 2 (I expect it to increase), and ha-index is 75 (I expect it to remain the same) :) .
+<br>
 <p></p>
+<br>
+<h2>My Education:</h2>
+Education
+1. <b><i>Doctor of Philosophy - PhD</i></b>, Computer Science and Computer Science, Michigan State University, <u>current student</u>.
+2. <b><i>Master of Technology - MTech</i></b>, Computer Science and Engineering, Indian Institute of Information Technology Vadodara, 2018 to 2020.
+3. <b><i>Bachelor of Technology - BTech</i></b>, Computer Science, Ramanujan College (University of Delhi), 2013 to 2017.
+4. <b><i>High School</i><b>, Physics, Chemistry, Mathematics, Computer Science, Environmental Science, English, Holy Family Convent School (Council for the Indian School Certificate Examinations), 2000 to 2013 (Kindergarten to High School).
 
 </body>
 <footer id="bottom"></footer>
