--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
 <p></p>
 <br>
 <h2>My Education:</h2>
-Education
-1. <b><i>Doctor of Philosophy - PhD</i></b>, Computer Science and Computer Science, Michigan State University, <u>current student</u>.
-2. <b><i>Master of Technology - MTech</i></b>, Computer Science and Engineering, Indian Institute of Information Technology Vadodara, 2018 to 2020.
-3. <b><i>Bachelor of Technology - BTech</i></b>, Computer Science, Ramanujan College (University of Delhi), 2013 to 2017.
-4. <b><i>High School</i><b>, Physics, Chemistry, Mathematics, Computer Science, Environmental Science, English, Holy Family Convent School (Council for the Indian School Certificate Examinations), 2000 to 2013 (Kindergarten to High School).
+<p>1. <b><i>Doctor of Philosophy - PhD</i></b>, Computer Science and Computer Science, Michigan State University, <u>current student</u>.
+<p>2. <b><i>Master of Technology - MTech</i></b>, Computer Science and Engineering, Indian Institute of Information Technology Vadodara, 2018 to 2020.
+<p>3. <b><i>Bachelor of Technology - BTech</i></b>, Computer Science, Ramanujan College (University of Delhi), 2013 to 2017.
+<p>4. <b><i>High School</i><b>, Physics, Chemistry, Mathematics, Computer Science, Environmental Science, English, Holy Family Convent School (Council for the Indian School Certificate Examinations), 2000 to 2013 (Kindergarten to High School).
 
 </body>
 <footer id="bottom"></footer>
