--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 <p>3. <b><i>Bachelor of Technology - BTech</i></b>, Computer Science, Ramanujan College (University of Delhi), 2013 to 2017.
 <p>4. <b><i>High School</i></b>, Physics, Chemistry, Mathematics, Computer Science, Environmental Science, English, Holy Family Convent School (Council for the Indian School Certificate Examinations), 2000 to 2013 (Kindergarten to High School).
 
+
+<table style="width:90%">
+	<tbody>
+		<tr>
+			<td>
+			<a  title="MSU" href="https://msu.edu">
+			<img src="/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
+			</a>
+		<td>
+			<a  title="DU" href="https://du.ac.in">
+			<img src="/du.png" id="headerImage" style="height: 132px; width: 132px">
+			</a>
+</tbody>
 </body>
 <footer id="bottom"></footer>
 </html>
