--- a/top.html
+++ b/top.html
@@ -11,6 +11,10 @@
             				<h1 style="text-align: center">
                 				ARYA TANMAY GUPTA
             				</h1>
+				<td>
+					<a  title="MSU" href="https://msu.edu">
+						<img src="/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
+					</a>
             	</tbody>
             </table>
         </div>
