--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 			<a  title="DU" href="https://du.ac.in">
 			<img src="/du.png" id="headerImage" style="height: 132px; width: 132px">
 			</a>
+		<td>
+			<a  title="HFCS" href="http://holyfamilyaonla.org/">
+			<img src="/hfcs.gif" id="headerImage" style="height: 132px; width: 132px">
+			</a>
 </tbody>
 </body>
 <footer id="bottom"></footer>
