--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <p>4. <b><i>High School</i></b>, Physics, Chemistry, Mathematics, Computer Science, Environmental Science, English, Holy Family Convent School (Council for the Indian School Certificate Examinations), 2000 to 2013 (Kindergarten to High School).
 
 
-<table style="width:90%">
+<table style="width:90%" align="right">
 	<tbody>
 		<tr>
 			<td>
@@ -47,7 +47,9 @@
 			<a  title="HFCS" href="http://holyfamilyaonla.org/">
 			<img src="/hfcs.gif" id="headerImage" style="height: 132px; width: 132px">
 			</a>
-</tbody>
+	</tbody>
+</table>
+
 </body>
 <footer id="bottom"></footer>
 </html>
