--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <p>4. <b><i>High School</i></b>, Physics, Chemistry, Mathematics, Computer Science, Environmental Science, English, Holy Family Convent School (Council for the Indian School Certificate Examinations), 2000 to 2013 (Kindergarten to High School).
 
 
-<table style="width:90%" align="right">
+<table align="right">
 	<tbody>
 		<tr>
 			<td>
