--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 	<tbody>
 		<tr>
 			<td>
-			<a  title="MSU" href="https://msu.edu">
+			<a  title="MSU" href="https://msu.edu/">
 			<img src="/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
 			</a>
 		<td>
-			<a  title="DU" href="https://du.ac.in">
+			<a  title="DU" href="http://du.ac.in/">
 			<img src="/du.png" id="headerImage" style="height: 132px; width: 132px">
 			</a>
 		<td>
