--- a/teaching.html
+++ b/teaching.html
@@ -34,7 +34,7 @@
 			<small>
 				<br>&emsp; &emsp; &emsp; &emsp; CSE 231 = Introduction to programming I (Python)
 				<br>&emsp; &emsp; &emsp; &emsp; CSE 232 = Introduction to programming II (C++)
-				<br>&emsp; &emsp; &emsp; &emsp; CSE 260 = Discrete Structures in Computer Science
+				<br>&emsp; &emsp; &emsp; &emsp; CSE 260 = Discrete Mathematics for Computer Science
 				<br>&emsp; &emsp; &emsp; &emsp; CSE 835 = Algorithmic Graph Theory
 			</small>
 		</p>
