--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 <p>My email address: atgupta AT msu DOT edu.
 <br>
-<p>My address:
+<p>My office address:
 <br>&emsp; &emsp; Engineering Building,
 <br>&emsp; &emsp; 428 South Shaw Lane, 3114
 <br>&emsp; &emsp; East Lansing, Michigan - 48824 (USA)
