--- a/non-teaching.html
+++ b/non-teaching.html
@@ -46,7 +46,7 @@
 					<br>&emsp; &emsp; &#8226; &emsp; Software development (C++, Java),
 					<br>&emsp; &emsp; &#8226; &emsp; Website development (html, css, javascript, php),
 					<br>&emsp; &emsp; &#8226; &emsp; Embedded systems (Arduino uno, Atmega (2560), Raspberry Pi).
-				<br>&emsp; Guidance to the team with various academic subjects.
+				<br>&emsp; Discussion sessions among the team on academic subjects.
 		</p>
 		</span>
 	</div>
