--- a/non-teaching.html
+++ b/non-teaching.html
@@ -123,7 +123,16 @@
 
 	<h2>Volunteer Assignments</h2>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Member at Centre for Ethics and Values</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Member of the Advisory Group for The Graduate Teaching Assistant Program, 2021</i></b>, USA Public Land Grant, Michigan State University.. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			No details..
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Member at Centre for Ethics and Values</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -135,7 +144,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Core Member at the Foundation Day</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>3. <b><i>Core Member at the Foundation Day</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -145,7 +154,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>3. <b><i>Volunteer at the Ecology Club</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>4. <b><i>Volunteer at the Ecology Club</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -156,7 +165,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>4. <b><i>Volunteer at Antargyan 2013 cultural fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Science and Life. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Volunteer at Antargyan 2013 cultural fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Science and Life. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -167,7 +176,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Head Boy</i></b>, Holy Family Generalate, Holy Family Convent School. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>6. <b><i>Head Boy</i></b>, Holy Family Generalate, Holy Family Convent School. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
