--- a/non-teaching.html
+++ b/non-teaching.html
@@ -123,7 +123,7 @@
 
 	<h2>Volunteer Assignments</h2>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Member of the Advisory Group for The Graduate Teaching Assistant Program, 2021</i></b>, USA Public Land Grant, Michigan State University.. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Member of the Advisory Group for The Graduate Teaching Assistant Preparation Program, 2021</i></b>, USA Public Land Grant, Michigan State University.. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
