--- a/top.html
+++ b/top.html
@@ -4,7 +4,7 @@
         		<tbody>
         			<tr>
         				<td>
-        					<a  title="Arya T Gupta" href="\">
+        					<a  title="Arya T Gupta" href="/">
                 				<img src="/arya.png" id="headerImage" style="height: 132px; width: 132px">
             				</a>
             			<td>
@@ -28,16 +28,16 @@
                 	<a href="/articles.html">Articles</a>
                 </li>
 		<li>
-               		<a href="teaching.html">Teaching Assignments</a>
+               		<a href="/teaching.html">Teaching Assignments</a>
 		</li>
 		<li>
-               		<a href="non-teaching.html">Non-Teaching Assignments</a>
+               		<a href="/non-teaching.html">Non-Teaching Assignments</a>
 		</li>
 		<li>
-               		<a href="projects.html">Projects</a>
+               		<a href="/projects.html">Projects</a>
 		</li>
 		<li>
-               		<a href="contact.html">Contact Me</a>
+               		<a href="/contact.html">Contact Me</a>
 		</li>
             </ul>
         </div>
