--- a/top.html
+++ b/top.html
@@ -1,4 +1,4 @@
-	<link href="\styles.css" type="text/css" rel="stylesheet"/>
+	<link href="/styles.css" type="text/css" rel="stylesheet"/>
 	<div id="header">
         	<table style="width:90%">
         		<tbody>
