--- a/top.html
+++ b/top.html
@@ -22,7 +22,7 @@
         <div id="nav">
             <ul>
                 <li>
-                    <a href="\">Home</a>
+                    <a href="/">Home</a>
                 </li>
 		<li>
                 	<a href="/articles.html">Articles</a>
