--- a/top.html
+++ b/top.html
@@ -1,11 +1,11 @@
-	<link href="/styles.css" type="text/css" rel="stylesheet"/>
+	<link href="../styles.css" type="text/css" rel="stylesheet"/>
 	<div id="header">
         	<table style="width:90%">
         		<tbody>
         			<tr>
         				<td>
-        					<a  title="Arya T Gupta" href="/">
-                				<img src="/arya.png" id="headerImage" style="height: 132px; width: 132px">
+        					<a  title="Arya T Gupta" href="../">
+                				<img src="../arya.png" id="headerImage" style="height: 132px; width: 132px">
             				</a>
             			<td>
             				<h1 style="text-align: center">
@@ -13,7 +13,7 @@
             				</h1>
 				<td>
 					<a  title="MSU" href="https://msu.edu">
-						<img src="/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
+						<img src="../msu.jpg" id="headerImage" style="height: 132px; width: 132px">
 					</a>
             	</tbody>
             </table>
@@ -22,22 +22,22 @@
         <div id="nav">
             <ul>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="../">Home</a>
                 </li>
 		<li>
-                	<a href="/articles.html">Articles</a>
+                	<a href="../articles.html">Articles</a>
                 </li>
 		<li>
-               		<a href="/teaching.html">Teaching Assignments</a>
+               		<a href="../teaching.html">Teaching Assignments</a>
 		</li>
 		<li>
-               		<a href="/non-teaching.html">Non-Teaching Assignments</a>
+               		<a href="../non-teaching.html">Non-Teaching Assignments</a>
 		</li>
 		<li>
-               		<a href="/projects.html">Projects</a>
+               		<a href="../projects.html">Projects</a>
 		</li>
 		<li>
-               		<a href="/contact.html">Contact Me</a>
+               		<a href="../contact.html">Contact Me</a>
 		</li>
             </ul>
         </div>
