--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 <br>&emsp; &emsp; East Lansing, Michigan - 48824 (USA)
 <br>
 <p>Social Media: <a title="Linkedin" href="https://www.linkedin.com/in/aryatanmaygupta/" target="_blank">
-    		<img style="height: 17px" src="\Linkedin">
+    		<img style="height: 17px" src="../Linkedin">
     	</a>
 
 </body>
