--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 
 <div id="top"></div>
 	
-<p>I am a PhD student at the Department of Computer Science and Engineering, Michigan State University. My research involves distributed systems, graph theory, theory of computation. My advisor is <a href="http://www.cse.msu.edu/~sandeep/"><u>Professor Sandeep S Kulkarni</u></a>.
+<p>I am a PhD student at the Department of Computer Science and Engineering, Michigan State University. My research involves distributed systems, graph theory, theory of computation.
 <p>During my undergraduate, I dealt with software projects, projects based on embedded systems, intelligence, and analysis. I instructed over software development, embedded systems (arduino, atmega, raspberry), and programming (Java, Python, C, C++).
 <p>I am also interested in modelling of natural systems, particularly in computational biology and applications of computer science in healthcare, agriculture.
 <p>My h-index is 2 (I expect it to increase), and ha-index is 75 (I expect it to remain the same) :) .
+<p>My advisor: <a href="http://www.cse.msu.edu/~sandeep/"><u>Professor Sandeep S Kulkarni</u></a>.
+<p>My research group: <a href="http://sens.cse.msu.edu/"><u>Software Engineering and Network Systems (SENS)</u></a>
 <br>
 <p></p>
 <br>
