--- a/articles.html
+++ b/articles.html
@@ -4,23 +4,101 @@
 
 <script>
 	$(document).ready(function(){
-		$('#brain').load("brain.html");
+		$('#head').load("head.html");
 		$('#top').load("top.html");
 		$('#bottom').load("bottom.html");
 	});
 </script>
 <head>
-	<link rel="shortcut icon" href="/arya.png"/>
-	<div id="brain"></div>
-        <link href="\styles.css" type="text/css" rel="stylesheet"/>
+	<link rel="shortcut icon" href="/~atgupta/favicon.png"/>
+	<div id="head"></div>
 </head>
 <body>
 
 	<div id="top"></div>
 	<h2>My Articles</h2>
 	<h4>Click to go to the article</h4>
-	<p>[1] <a href="https://link.springer.com/chapter/10.1007/978-3-030-67899-9_6">Gupta, A. T., Lokhande, S. A., and Mondal, K. (2021) Burning Grids and Intervals. In: Mudgal A., Subramanian C.R. (eds) Algorithms and Discrete Applied Mathematics. CALDAM 2021. Lecture Notes in Computer Science, vol 12601. Springer, Cham. https://doi.org/10.1007/978-3-030-67899-9_6</a>.
-	<p>[2] <a href="https://scholarsarchive.byu.edu/openwater/vol5/iss2/2/">Gupta, A. T. (2018) A Software System Proposing the Processing of Crowdsourced Data to Monitor a Flood Event: An A.I. Approach. Open Water Journal 5(2) 17-23</a>.
+	<p></p>
+	
+	
+	<h4>Conference Publications</h4>
+	
+	<p>[10] <a>
+	Gupta, A. T. and Kulkarni, S. S. (2024) Tolerance to Asynchrony of an Algorithm for Gathering Myopic Robots on an Infinite Triangular Grid. 19th European Dependable Computing Conference. EDCC 2024.
+	</a>
+	<a><b>Not online yet.</b></a>
+	<a href=https://arxiv.org/abs/2307.13080><u>arXiv version</u>.</a>
+	</p>
+	
+	<p>[8] <a href=https://ieeexplore.ieee.org/abstract/document/10419321>
+	Gupta, A. T. and Kulkarni, S. S. (2023) Inducing Lattices in Non-Lattice-Linear Problems. In Proceedings of the 42nd International Symposium on Reliable Distributed Systems. SRDS 2023.</a>
+	https://doi.org/10.1109/SRDS60354.2023.00031.
+	<a href=https://youtu.be/HP-FChAM8fk><u>20 min presentation</u>.</a>
+	<a href=https://arxiv.org/abs/2210.03055><u>arXiv version</u>.</a>
+	(extended version of brief announcement [4])
+	</p>
+	
+	<p>[7] <a href=https://link.springer.com/chapter/10.1007/978-3-031-44274-2_12>
+	Gupta, A. T. and Kulkarni, S. S. (2023) Lattice-Linearity of Multiplication and Modulo. In: Dolev, S., Schieber, B. (eds) Stabilization, Safety, and Security of Distributed Systems. SSS 2023. Lecture Notes in Computer Science, vol 14310. Springer, Cham. </a>
+	https://doi.org/10.1007/978-3-031-44274-2_12.
+	<a href=https://youtu.be/Nd-4TqS0y4U><u>20 min presentation</u>.</a>
+	<a href=https://arxiv.org/abs/2302.07207><u>arXiv version</u>.</a>
+	</p>
+	
+	<p>[5] <a href=https://dl.acm.org/doi/abs/10.1145/3571306.3571391>
+	Nguyen, D. N., Gupta, A. T. and Kulkarni, S. S. (2023) Analyzing Program Transitions to Compute Benefit of Tolerating Consistency Violation Faults. In Proceedings of the 24th International Conference on Distributed Computing and Networking (ICDCN '23). Association for Computing Machinery, New York, NY, USA. 58-69.</a>
+	https://doi.org/10.1145/3571306.3571391.
+	<a href=https://youtu.be/v=cDjHumJxUDE><u>20 min presentation</u>.</a>
+	<a href=https://arxiv.org/abs/2108.09418><u>arXiv version</u>.</a>
+	</p>
+	
+	<p>[4] <a href=https://link.springer.com/chapter/10.1007/978-3-031-21017-4_24>
+	Gupta, A. T. and Kulkarni S. S. (2022) Brief Announcement: Fully Lattice Linear Algorithms. In: Devismes, S., Petit, F., Altisen, K., Di Luna, G.A., Fernandez Anta, A. (eds) Stabilization, Safety, and Security of Distributed Systems. SSS 2022. Lecture Notes in Computer Science, vol 13751. Springer, Cham.</a>
+	https://doi.org/10.1007/978-3-031-21017-4_24.
+	<a href=https://youtu.be/VaN7mrxqK-k><u>8 min presentation</u>.</a>
+	<a href=https://arxiv.org/abs/2209.14703><u>arXiv version</u>.</a>
+	(full conference paper: [8])
+	</p>
+	
+	<p>[3] <a href="https://link.springer.com/chapter/10.1007/978-3-030-91081-5_24">
+	Gupta, A. T., and Kulkarni, S. S. (2021) Extending Lattice Linearity for Self-stabilizing Algorithms. In: Johnen C., Schiller E.M., Schmid S. (eds) Stabilization, Safety, and Security of Distributed Systems. SSS 2021. Lecture Notes in Computer Science, vol 13046. Springer, Cham.</a>
+	https://doi.org/10.1007/978-3-030-91081-5_24.
+	<a href="https://youtu.be/fc4ODGlViwc"><u>8 minute presentation</u></a>.
+	<a href="https://youtu.be/Ped4wdQ3Lmc"><u>20 minute presentation</u></a>.
+	<a href="https://arxiv.org/abs/2109.13216"><u>arXiv version</u></a>.
+	(Journal version: [9])
+	</p>
+	
+	<p>[2] <a href="https://link.springer.com/chapter/10.1007/978-3-030-67899-9_6">
+	Gupta, A. T., Lokhande, S. A., and Mondal, K. (2021) Burning Grids and Intervals. In: Mudgal A., Subramanian C.R. (eds) Algorithms and Discrete Applied Mathematics. CALDAM 2021. Lecture Notes in Computer Science, vol 12601. Springer, Cham.</a>
+	https://doi.org/10.1007/978-3-030-67899-9_6.
+	<a href="https://youtu.be/iCjR6oA0sJE"><u>20 minute presentation</u></a>.
+	<a href="https://arxiv.org/abs/2010.01439"><u>arXiv version</u></a>.
+	(Journal version: [6])
+	</p>
+	<p></p>
+	
+	
+	<h4>Journal Publications</h4>
+	
+	<p>[9] <a href=https://www.sciencedirect.com/science/article/pii/S0743731523001727>
+	Gupta, A. T. and Kulkarni S. S. (2024) Eventually Lattice Linear Algorithms.
+	Journal of Parallel and Distributed Computing.</a>
+	https://doi.org/10.1016/j.jpdc.2023.104802.
+	<a href=https://arxiv.org/abs/2311.09760><u>arXiv version</u></a>
+	(Extended version of conference paper [3])
+	</p>
+	
+	<p>[6] <a href=https://www.sciencedirect.com/science/article/pii/S0166218X23001099>
+	Gorain, B., Gupta, A. T., Lokhande, S. A., Mondal, K. and Pandit, S. (2023) Burning and w-burning of geometric graphs.
+	Discrete Applied Mathematics 336, 83-98.</a>
+	https://doi.org/10.1016/j.dam.2023.03.026.
+	(Extended version of conference paper [2])
+	</p>
+	
+	<p>[1] <a href="https://scholarsarchive.byu.edu/openwater/vol5/iss2/2/">
+	Gupta, A. T. (2018) A Software System Proposing the Processing of Crowdsourced Data to Monitor a Flood Event: An A.I. Approach.
+	Open Water Journal 5(2) 17-23</a>.
 	<p></p>
 	<p>More coming soon.. ..
 
