--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,14 @@
 
 <script>
 	$(document).ready(function(){
-		$('#brain').load("brain.html");
+		$('#head').load("head.html");
 		$('#top').load("top.html");
 		$('#bottom').load("bottom.html");
 	});
 </script>
 <head>
-	<link rel="shortcut icon" href="/arya.png"/>
-	<div id="brain"></div>
-        <link href="\styles.css" type="text/css" rel="stylesheet"/>
+	<link rel="shortcut icon" href="/~atgupta/favicon.png"/>
+	<div id="head"></div>
 </head>
 <body>
 
@@ -21,12 +20,12 @@
 <p>My email address: atgupta AT msu DOT edu.
 <br>
 <p>My office address:
-<br>&emsp; &emsp; Engineering Building,
-<br>&emsp; &emsp; 428 South Shaw Lane, 3114
+<br>&emsp; &emsp; 3320 Engineering Building,
+<br>&emsp; &emsp; 428 South Shaw Lane, 
 <br>&emsp; &emsp; East Lansing, Michigan - 48824 (USA)
 <br>
 <p>Social Media: <a title="Linkedin" href="https://www.linkedin.com/in/aryatanmaygupta/" target="_blank">
-    		<img style="height: 17px" src="../Linkedin">
+    		<img style="height: 17px" src="/~atgupta/Linkedin">
     	</a>
 
 </body>
