--- a/index.html
+++ b/index.html
@@ -4,49 +4,68 @@
 
 <script>
 	$(document).ready(function(){
-		$('#brain').load("brain.html");
+		$('#head').load("head.html");
 		$('#top').load("top.html");
 		$('#bottom').load("bottom.html");
 	});
 </script>
 <head>
-	<link rel="shortcut icon" href="/arya.png"/>
-	<div id="brain"></div>
-        <link href="\styles.css" type="text/css" rel="stylesheet"/>
+	<link rel="shortcut icon" href="/~atgupta/favicon.png"/>
+	<div id="head"></div>
 </head>
 <body>
 
 <div id="top"></div>
 	
-<p>I am a PhD student at the Department of Computer Science and Engineering, Michigan State University. My research involves distributed systems, graph theory, theory of computation.
-<p>During my undergraduate, I dealt with software projects, projects based on embedded systems, intelligence, and analysis. I instructed over software development, embedded systems (arduino, atmega, raspberry), and programming (Java, Python, C, C++).
-<p>I am also interested in modelling of natural systems, particularly in computational biology and applications of computer science in healthcare, agriculture.
-<p>My h-index is 2 (I expect it to increase), and ha-index is 75 (I expect it to remain the same) :) .
+<p>Welcome! I am a Graduate Student at Computer Science and Engineering, Michigan State University. I also serve as a Graduate Teaching Assistant with the department. My research interests are distributed systems, graph theory, theoretical computer science, discrete mathematics. I am also serving as a member of the Graduate Teaching Assistant Program Advisory Group with the Graduate School, Michigan State University.
+
+<p>As part of my doctoral research, we developed a theory that describes the necessary and sufficient properties of parallel processing algorithms that make them tolerant to asynchrony. In addition, we developed asynchrony-tolerant algorithms for several problems, and also showed for various existing algorithms that they are tolerant to asynchrony.
+
+<p>As part of my master's research, we wrote several NP-Completeness proofs.
+
+<p>During my undergrad, I dealt with several projects in embedded systems and software development. Our projects encompass solutions to problems from various domains. I organized and conducted several workshops on embedded systems and software development.
+
+<p>My master's and doctoral research combined have produced several results where we improve an existing algorithm. Specifically, among other results, we show for several existing systems that 
+<br>&emsp;&emsp; (1) an algorithm would work the same with fewer assumtions (e.g., not needing a scheduler), or
+<br>&emsp;&emsp; (2) an algorithm would work better as it is (e.g. converging in fewer rounds), or
+<br>&emsp;&emsp; (3) a problem can be solved in lesser resources' requirement (e.g., not needing to produce additional data structure)
+<br> than originally assumed.
+
+<p>I am a poet, painter, engineer, electrician, carpenter, architect, mason, and a very curious mathematician and computer scientist.
+
+<p>My h-index is 5 (I expect it to increase), and ha-index is 75 (I expect it to remain the same) :) .
+
 <p>My advisor: <a href="http://www.cse.msu.edu/~sandeep/"><u>Professor Sandeep S Kulkarni</u></a>.
-<p>My research group: <a href="http://sens.cse.msu.edu/"><u>Software Engineering and Network Systems (SENS)</u></a>
 <br>
 <p></p>
 <br>
+
 <h2>My Education:</h2>
-<p>1. <b><i>Doctor of Philosophy - PhD</i></b>, Computer Science and Engineering, Michigan State University, <u>current student</u>, started August 2020.
-<p>2. <b><i>Master of Technology - MTech</i></b>, Computer Science and Engineering, Indian Institute of Information Technology Vadodara, 2018 to 2020.
-<p>3. <b><i>Bachelor of Technology - BTech</i></b>, Computer Science, Ramanujan College (University of Delhi), 2013 to 2017.
-<p>4. <b><i>High School</i></b>, Physics, Chemistry, Mathematics, Computer Science, Environmental Science, English, Holy Family Convent School (Council for the Indian School Certificate Examinations), 2000 to 2013 (Kindergarten to High School).
+<p>4. <b><i>Doctor of Philosophy - PhD</i></b>, Computer Science and Engineering, Michigan State University, <u>current student</u>, started August 2020.
+
+<p>3. <b><i>Master of Technology - MTech</i></b>, Computer Science and Engineering, Indian Institute of Information Technology Vadodara, 2018 to 2020.
+<br>&emsp;&emsp;&emsp;Dissertation: Burning Geometric Graphs. 
+<a href=https://arxiv.org/abs/2010.01439><u>arXiv</u>.<a>
+
+<p>2. <b><i>Bachelor of Technology - BTech</i></b>, Computer Science, Ramanujan College (University of Delhi), 2013 to 2017.
+
+<p>1. <b><i>High School</i></b>, Physics, Chemistry, Mathematics, Computer Science, Environmental Science, English, Holy Family Convent School (Council for the Indian School Certificate Examinations), 2000 to 2013 (Kindergarten to High School).
+
 
 <table align="right">
 	<tbody>
 		<tr>
 			<td>
 			<a  title="MSU" href="https://msu.edu/">
-			<img src="/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
+			<img src="/~atgupta/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
 			</a>
 		<td>
 			<a  title="DU" href="http://du.ac.in/">
-			<img src="/du.png" id="headerImage" style="height: 132px; width: 132px">
+			<img src="/~atgupta/du.png" id="headerImage" style="height: 132px; width: 132px">
 			</a>
 		<td>
 			<a  title="HFCS" href="http://holyfamilyaonla.org/">
-			<img src="/hfcs.gif" id="headerImage" style="height: 132px; width: 132px">
+			<img src="/~atgupta/hfcs.gif" id="headerImage" style="height: 132px; width: 132px">
 			</a>
 	</tbody>
 </table>
