--- a/non-teaching.html
+++ b/non-teaching.html
@@ -4,15 +4,14 @@
 
 <script>
 	$(document).ready(function(){
-		$('#brain').load("brain.html");
+		$('#head').load("head.html");
 		$('#top').load("top.html");
 		$('#bottom').load("bottom.html");
 	});
 </script>
 <head>
-	<link rel="shortcut icon" href="/arya.png"/>
-	<div id="brain"></div>
-        <link href="\styles.css" type="text/css" rel="stylesheet"/>
+	<link rel="shortcut icon" href="/~atgupta/favicon.png"/>
+	<div id="head"></div>
 </head>
 <body>
 
@@ -21,7 +20,18 @@
 	<p>
 	<h2>Working / Other Academic Assignments</h2>
 
- 	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Member at Centre for Robotics and Artificial Intelligence</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>6. <b><i>Member of the Graduate Teaching Assistant Teaching Learning Community (GTA TLC) Advisory Group</i></b> USA Public Land Grant, Michigan State University, The Graduate School. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			July 2021 <u>till date</u>
+				<br>&emsp; &#8226; &emsp; Planning trainings for new, returning, and current GTAs throughout the year.
+				<br>&emsp; &#8226; &emsp; Participated in the GTA panel at the The Graduate Teaching Assistant Preparation Program, 2021 and 2022.
+		</p>
+		</span>
+	</div>
+	
+ 	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Member at Centre for Robotics and Artificial Intelligence</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -37,7 +47,7 @@
 		</p>
 		</span>
 	</div>
-	 <div id="curtain" onclick="myFunction(this)"><p>2. <b><i>President at the Quicksort Society</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
+	 <div id="curtain" onclick="myFunction(this)"><p>4. <b><i>President at the Quicksort Society</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -61,7 +71,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>4. <b><i>Research Trainee</i></b>, Govt. of India, Defence Research and Development Organisation, Scientific Analysis Group. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Research Trainee</i></b>, Govt. of India, Defence Research and Development Organisation, Scientific Analysis Group. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -71,7 +81,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Software Developer</i></b>, Govt.of Delhi, Yamuna Biodiversity Park. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Software Developer</i></b>, Govt.of Delhi, Yamuna Biodiversity Park. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -83,7 +93,7 @@
 
 	<h2>Other Technical Assignments</h2>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Supervisor at Turington 2017 technical fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>3. <b><i>Supervisor at Turington 2017 technical fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -110,7 +120,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>3. <b><i>Organizer at Turington (Intracollege) 2014 technical fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Organizer at Turington (Intracollege) 2014 technical fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -123,16 +133,7 @@
 
 	<h2>Volunteer Assignments</h2>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Member of the Advisory Group for The Graduate Teaching Assistant Preparation Program, 2021</i></b>, USA Public Land Grant, Michigan State University.. &#9663;</p>
-
-		<span id="curtainText" style="display: none;">
-		<p>
-			No details added.
-		</p>
-		</span>
-	</div>
-	
-	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Member at Centre for Ethics and Values</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Member at Centre for Ethics and Values</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -144,7 +145,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>3. <b><i>Core Member at the Foundation Day</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>4. <b><i>Core Member at the Foundation Day</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -154,7 +155,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>4. <b><i>Volunteer at the Ecology Club</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>3. <b><i>Volunteer at the Ecology Club</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -165,7 +166,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Volunteer at Antargyan 2013 cultural fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Science and Life. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Volunteer at Antargyan 2013 cultural fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Science and Life. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
@@ -176,7 +177,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>6. <b><i>Head Boy</i></b>, Holy Family Generalate, Holy Family Convent School. &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Head Boy</i></b>, Holy Family Generalate, Holy Family Convent School. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
