--- a/projects.html
+++ b/projects.html
@@ -4,15 +4,14 @@
 
 <script>
 	$(document).ready(function(){
-		$('#brain').load("brain.html");
+		$('#head').load("head.html");
 		$('#top').load("top.html");
 		$('#bottom').load("bottom.html");
 	});
 </script>
 <head>
-	<link rel="shortcut icon" href="/arya.png"/>
-	<div id="brain"></div>
-        <link href="\styles.css" type="text/css" rel="stylesheet"/>
+	<link rel="shortcut icon" href="/~atgupta/favicon.png"/>
+	<div id="head"></div>
 </head>
 <body>
 
@@ -28,7 +27,9 @@
 			August 2019 to July 2020
 			<br>&emsp; Supervisor: Dr Swapnil A Lokhande, Assistant Professor, Indian Institute of Information Technology Vadodara, India.
 				<br>&emsp; &emsp; Studied the graph burning problem. We showed that graph burning is NP-Complete on interval graphs, permutation graphs and disc graphs. As corollary, we have that burning of trees, chordal graphs, path forests, planar graphs, bipartite graphs, spider graphs, forests is NP-Complete. For these corollaries, results are present in the literature prior to our work.
-				<br>&emsp; &emsp; Articles published: <a href="https://link.springer.com/chapter/10.1007/978-3-030-67899-9_6"><u>Burning Grids and Intervals</u></a>.
+				<br>&emsp; &emsp; Articles published:
+					<u>Burning Grids and Intervals</u> ([2] on articles page),
+					<u>Burning and w-burning of geometric graphs</u>([6] on articles page).
 				<br>&emsp; &emsp; This study was conducted as part of my MTech dissertation.
 		</p>
 		</span>
