--- a/top.html
+++ b/top.html
@@ -1,44 +1,48 @@
-	<link href="../styles.css" type="text/css" rel="stylesheet"/>
+	<link href="/~atgupta/styles.css" type="text/css" rel="stylesheet"/>
 	<div id="header">
-        	<table style="width:90%">
+        	<table style="margin-left: auto; margin-right: auto; width: 90%;">
         		<tbody>
         			<tr>
         				<td>
-        					<a  title="Arya T Gupta" href="../">
-                				<img src="../arya.png" id="headerImage" style="height: 132px; width: 132px">
-            				</a>
-            			<td>
-            				<h1 style="text-align: center">
-                				ARYA TANMAY GUPTA
-            				</h1>
-				<td>
-					<a  title="MSU" href="https://msu.edu">
-						<img src="../msu.jpg" id="headerImage" style="height: 132px; width: 132px">
-					</a>
-            	</tbody>
-            </table>
-        </div>
+        					<a  title="Arya Tanmay Gupta" href="/~atgupta/">
+                					<img src="/~atgupta/arya.png" id="headerImage" style="height: 132px; width: 132px">
+            					</a>
+					</td>
+            				<td>
+            					<h1 style="text-align: center">
+                					ARYA TANMAY GUPTA
+            					</h1>
+					</td>
+					<td>
+						<a  title="MSU" href="https://msu.edu">
+							<img src="/~atgupta/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
+						</a>
+					</td>
+				</tr>
+            		</tbody>
+        	</table>
+	</div>
         
         <div id="nav">
-            <ul>
-                <li>
-                    <a href="../">Home</a>
-                </li>
-		<li>
-                	<a href="../articles.html">Articles</a>
-                </li>
-		<li>
-               		<a href="../teaching.html">Teaching Assignments</a>
-		</li>
-		<li>
-               		<a href="../non-teaching.html">Non-Teaching Assignments</a>
-		</li>
-		<li>
-               		<a href="../projects.html">Projects</a>
-		</li>
-		<li>
-               		<a href="../contact.html">Contact Me</a>
-		</li>
-            </ul>
+        	<ul>
+                	<li>
+                		<a href="/~atgupta/">Home</a>
+                	</li>
+			<li>
+                		<a href="/~atgupta/articles.html">Articles</a>
+                	</li>
+			<li>
+               			<a href="/~atgupta/teaching.html">Teaching</a>
+			</li>
+			<li>
+               			<a href="/~atgupta/non-teaching.html">Non-Teaching Assignments</a>
+			</li>
+			<li>
+               			<a href="/~atgupta/projects.html">Projects</a>
+			</li>
+			<li>
+               			<a href="/~atgupta/contact.html">Contact Me</a>
+			</li>
+        	</ul>
         </div>
         <p></p>
