--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
 		<tr>
 			<td>
 			<a  title="MSU" href="https://msu.edu/">
-			<img src="/~atgupta/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
+			<img src="/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
 			</a>
 		<td>
 			<a  title="DU" href="http://du.ac.in/">
-			<img src="/~atgupta/du.png" id="headerImage" style="height: 132px; width: 132px">
+			<img src="/du.png" id="headerImage" style="height: 132px; width: 132px">
 			</a>
 		<td>
 			<a  title="HFCS" href="http://holyfamilyaonla.org/">
-			<img src="/~atgupta/hfcs.gif" id="headerImage" style="height: 132px; width: 132px">
+			<img src="/hfcs.gif" id="headerImage" style="height: 132px; width: 132px">
 			</a>
 	</tbody>
 </table>
